--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-md-3 bg-light">
                 <div class="input-group mb-4">
                     <input type="text" class="form-control" placeholder="Search for a City" aria-label="City name"
-                        aria-describedby="searchBtn">
+                        aria-describedby="searchBtn" id="searchText">
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="button" id="searchBtn">
                             <i class="fas fa-search"></i>
