Update UV Index button with value & corresponding color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>Temperature: <span id="temp"></span> &deg;F</p>
                         <p>Humidity: <span id="humidity"></span>%</p>
                         <p>Wind Speed: <span id="windSpeed"></span> mph</p>
-                        <p>UV Index: <button disabled class="btn btn-sm btn-success" id="uvIndex"></button></p>
+                        <p>UV Index: <button disabled id="uvIndex"></button></p>
                     </div>
                 </div>
                 <br>
