--- a/index.html
+++ b/index.html
@@ -52,16 +52,11 @@
                 <br>
                 <h3>5-Day Forecast</h3>
                 <div class="card-deck">
-                    <div class="card p-2 bg-primary text-light" id="day-1">
-                    </div>
-                    <div class="card p-2 bg-primary text-light" id="day-2">
-                    </div>
-                    <div class="card p-2 bg-primary text-light" id="day-3">
-                    </div>
-                    <div class="card p-2 bg-primary text-light" id="day-4">
-                    </div>
-                    <div class="card p-2 bg-primary text-light" id="day-5">
-                    </div>
+                    <div class="card p-2 bg-primary text-light" id="day-1"></div>
+                    <div class="card p-2 bg-primary text-light" id="day-2"></div>
+                    <div class="card p-2 bg-primary text-light" id="day-3"></div>
+                    <div class="card p-2 bg-primary text-light" id="day-4"></div>
+                    <div class="card p-2 bg-primary text-light" id="day-5"></div>
                 </div>
             </div>
 
