--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-md-3 bg-light">
+            <div class="col-lg-3 bg-light">
                 <div class="input-group mb-4">
                     <input type="text" class="form-control" placeholder="Search for a City" aria-label="City name"
                         aria-describedby="searchBtn" id="searchInput">
@@ -35,9 +35,9 @@
                 </div>
             </div>
 
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body pt-0">
                         <h2 class="card-title">
                             <span id="currentCity"></span>
                             <span id="currentIcon"></span>
@@ -50,13 +50,13 @@
                     </div>
                 </div>
                 <br>
-                <h3>5-Day Forecast</h3>
+                <h3 class="text-center">5-Day Forecast</h3>
                 <div class="card-deck">
-                    <div class="card p-2 bg-primary text-light" id="day-1"></div>
-                    <div class="card p-2 bg-primary text-light" id="day-2"></div>
-                    <div class="card p-2 bg-primary text-light" id="day-3"></div>
-                    <div class="card p-2 bg-primary text-light" id="day-4"></div>
-                    <div class="card p-2 bg-primary text-light" id="day-5"></div>
+                    <div class="card p-2 m-sm-2 m-3 bg-primary text-light" id="day-1"></div>
+                    <div class="card p-2 m-sm-2 m-3 bg-primary text-light" id="day-2"></div>
+                    <div class="card p-2 m-sm-2 m-3 bg-primary text-light" id="day-3"></div>
+                    <div class="card p-2 m-sm-2 m-3 bg-primary text-light" id="day-4"></div>
+                    <div class="card p-2 m-sm-2 m-3 bg-primary text-light" id="day-5"></div>
                 </div>
             </div>
 
