--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="list-group mb-4" id="searchHistory">
-                    <button type="button" class="list-group-item list-group-item-action">(previous search)</button>
+                    <!-- <button type="button" class="list-group-item list-group-item-action">(previous search)</button> -->
                 </div>
             </div>
 
