--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-lg-3 bg-light">
+            <div class="col-lg-3 bg-light" id="searchDiv">
                 <div class="input-group mb-4">
                     <input type="text" class="form-control" placeholder="Search for a City" aria-label="City name"
                         aria-describedby="searchBtn" id="searchInput">
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-9">
+            <div class="col-lg-9" id="resultsDiv">
                 <div class="card">
                     <div class="card-body pt-0">
                         <h2 class="card-title">
