--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="list-group mb-4" id="searchHistory">
-                    <!-- <button type="button" class="list-group-item list-group-item-action">(previous search)</button> -->
-                </div>
+                <div class="list-group mb-4" id="searchHistory"></div>
             </div>
 
             <div class="col-lg-9" id="resultsDiv">
